# AppManager

./: .gitignore  .gitmodules  404.html  Android.bp  AndroidManifest.xml  ApplicationsInfo_app-debug.apk  BUILDING.rst  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.rst  COPYING  PRIVACY_POLICY.rst  README.md  WORK_LOG.md  app_archive_fix.patch  build.gradle  changelog.html  common.gradle  deploy.sh  docs_deploy.sh  gradle.properties  index.html  package.json  push_to_mirrors.sh  settings.gradle  toybox-all.sh  versions.gradle
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml  help-wanted.md  help-wanted.yml  request-inclusion-of-ad-tracker.md  request-inclusion-of-ad-tracker.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: ant.yml  build.yml  codeql-analysis.yml  codeql.yml  (+5 more)
.run/: Documentation.run.xml  app.run.xml  app_details.run.xml  fm.run.xml  lint.run.xml  settings.run.xml  test.run.xml
AppManagerServer/: .gitignore  build.gradle
HiddenApi/: build.gradle
LICENSES/: Apache-2.0  BSD-2-Clause  BSD-3-Clause  CC-BY-SA-4.0  GPL-2.0  GPL-3.0  ISC  MIT  WTFPL
app/: .gitignore  build.gradle  dev_keystore.jks  lint.xml  proguard-rules.pro  version.properties
app/src/main/cpp/: AhoCorasick.cpp  AhoCorasick.h  CMakeLists.txt  am.cpp  io_github_muntashirakon_AppManager_compat_OsCompat.cpp  io_github_muntashirakon_AppManager_compat_OsCompat.h  io_github_muntashirakon_AppManager_utils_CpuUtils.cpp  io_github_muntashirakon_AppManager_utils_CpuUtils.h  io_github_muntashirakon_algo_AhoCorasick.cpp  io_github_muntashirakon_algo_AhoCorasick.h  io_github_muntashirakon_compat_system_OsCompat.cpp  io_github_muntashirakon_compat_system_OsCompat.h  run_server.c
de/: index.html
docs/: .gitignore  Makefile  README.md  build.gradle  changelog.md
en/: index.html
es/: index.html
faq/: app-components.html  index.html  misc.html
feat_docs/: build.gradle
fr/: index.html
guide/: adb-over-tcp.html  app-details-page.html  exodus-page.html  index.html  main-page.html  one-click-ops-page.html  settings-page.html  shared-pref-editor-page.html
hiddenapi/: build.gradle
ja/: index.html
ko/: index.html
libApkParser/: LICENSE  build.gradle
libOpenPGP/: build.gradle
libapkparser/: build.gradle
libcore/: build.gradle
libopenpgp/: build.gradle
libs/: README.md  add_lib.php  libsmali.jsonl  libsmali.txt
libserver/: build.gradle
metadata/: README.md
platform/: default-permissions.xml  permissions.xml  sysconfig.xml
pt/: index.html
pt-rBR/: index.html
readme/: README_es.md
ru/: index.html
schema/: changlelog.dtd  packages.dtd
scripts/: aab_to_apks.sh  backup_github_project.sh  check_am_server.sh  docs.php  docs_deploy.sh  fix_strings.php  keep-five.sh  lazysodium_apply_prerelease_path.sh  make_debloat_list.php  make_docs.sh  make_feat_docs.sh  make_suggestions.php  push_to_mirrors.sh  tmp_trackers.json  toybox-all.sh  uad_to_am_profile.php  update_libraries.php  update_libs.php  update_native_libs.php  update_trackers.php  utils.php
server/: build.gradle
sun/: build.gradle
sunJava/: build.gradle
tech/: AppOps.html  index.html  rules-specification.html
toybox/: build.gradle  build_toybox.sh
zh-rCN/: index.html
zh-rTW/: index.html
(+3005 files in other folders)
